# ising-graph

./: .clang-format  LICENCE  README.md  meson.build  meson_options.txt
benchmarks/: meson.build
benchmarks/ising/: isingbenchmark.cc  measurementbenchmark.cc  meson.build  metropolisbenchmark.cc  wolffbenchmark.cc
include/: mersenne.h  meson.build
include/algorithms/ising/: all.h  meson.build  metropolis.h  wolff.h
include/graph/: all.h  graph.h  grid2d.h  meson.build  weight_policies.h
include/graph/weight_policies/: base.h  meson.build  none.h
include/initialisers/: meson.build
include/initialisers/ising/: meson.build  random.h
include/measurement/: meson.build  susceptibility.h
include/models/: ising.h  meson.build
src/: main.cc  meson.build
tests/: meson.build
tests/algorithms/ising/: meson.build  metropolistest.cc  wolfftest.cc
tests/graph/: graphtest.cc  grid2dtest.cc  meson.build
tests/initialisers/ising/: meson.build  randomtest.cc
tests/models/: isingtest.cc  meson.build
